# rallylens

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
configs/: yolo_shuttle.yaml  yolo_shuttle_data.yaml
notebooks/: 02_shuttlecock_finetune.ipynb
outputs/demo/: report_demo.md
scripts/: make_gif.sh
src/rallylens/: __init__.py  cli.py  common.py  config.py  image_utils.py  serialization.py
src/rallylens/analysis/: __init__.py  events.py  heatmap.py  metrics.py
src/rallylens/domain/: __init__.py  video.py
src/rallylens/ingest/: downloader.py
src/rallylens/llm/: __init__.py  label_qa.py  prompt.py  report.py  report_generator.py  report_schema.py  vertex_client.py
src/rallylens/pipeline/: __init__.py  court.py  events.py  heatmaps.py  io.py  orchestrator.py  report.py  shuttle.py
src/rallylens/preprocess/: frame_sampler.py  rally_segmenter.py
src/rallylens/vision/: court_detector.py  court_homography.py  court_mapping.py  court_picker.py  detect_track.py  kalman_tracker.py  shuttle_tracker.py  shuttlecock_detector.py  tracknet.py
src/rallylens/viz/: __init__.py  _utils.py  court_diagram.py  heatmap.py  overlay.py  viz_court.py
tests/: conftest.py  test_analysis_metrics.py  test_cli_integration.py  test_cli_report.py  test_common.py  test_court_homography.py  test_downloader.py  test_events.py  test_frame_sampler.py  test_heatmap.py  test_kalman_tracker.py  test_llm_report.py  test_report_generator.py  test_serialization.py
