[project]
name = "rallylens"
version = "0.1.0"
description = "RallyLens — automated badminton match analysis CLI pipeline (랠리 분할, 선수/셔틀콕 추적, Claude 리포트 생성)"
readme = "README.md"
authors = [
    { name = "yeonseong", email = "yeonseong.dev@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["badminton", "computer-vision", "yolo", "tracking", "sports-analytics", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "anthropic>=0.95.0",
    "click>=8.3.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "scenedetect>=0.6.7",
    "ultralytics>=8.4.37",
    "yt-dlp>=2026.3.17",
]

[project.urls]
Homepage = "https://github.com/YeonSeong-Lee/rallylens"
Repository = "https://github.com/YeonSeong-Lee/rallylens"
Issues = "https://github.com/YeonSeong-Lee/rallylens/issues"

[project.scripts]
rallylens = "rallylens.cli:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
